<resources>
    <string name="app_name">SchoolManager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="give_experience">경험치 제공</string>
    <string name="export_excel">엑셀 내보내기</string>
    <string name="student_management">학생 관리</string>
    <string name="class_management">학급별 보기</string>
    <string name="school_work_title">활동 제목</string>
    <string name="school_work_simple_info">간단한 설명</string>
    <string name="ability_leadership">리더십</string>
    <string name="ability_academical">학업력</string>
    <string name="ability_cooperation">협동성</string>
    <string name="ability_career">진로</string>
    <string name="ability_sincerity">성실성</string>
    <string name="exp_sum">총합</string>
    <string name="school_work_detail_info">생기부 문구</string>
    <string name="school_work_edit_info">정보 수정</string>
    <string name="save_btn">저장</string>
    <string name="action_bar_title_work_management">나의 활동 관리</string>
    <string name="action_bar_title_work_edit">활동 수정</string>
    <string name="action_bar_title_new_work">활동 저장</string>
    <string name="kakao_native_app_key">b8eb07a6be89dd7b0179a198856b54db</string>
    <string name="kakao_app_key">kakaob8eb07a6be89dd7b0179a198856b54db</string>
    <string name="naver_client_id">TECojU6C7c5ePolWpAiZ</string>
    <string name="naver_client_secret">LQqJZwmnzi</string>
    <string name="naver_client_name">네이버아이디 로그인</string>
    <string name="open_class_btn">클래스 만들기</string>
    <string name="basic_score">0</string>
    <string name="under_construction">개발중인 페이지 입니다.</string>
    <string name="home_welcome">선생님 환영합니다.</string>
    <string name="home_number_of_class">5개의 클래스가 등록되어 있습니다.</string>
    <string name="delete_class">삭제하기</string>
    <string name="menu_home">홈</string>
    <string name="menu_student">학생관리</string>
    <string name="menu_schoolWork">활동관리</string>
    <string name="menu_community">커뮤니티</string>

</resources>