<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.schoolwork.SchoolWorkDetailActivity">

    <TextView
        android:id="@+id/action_bar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/teal_200"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:text="@string/action_bar_title_work_edit"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/delete_btn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar" />

    <TextView
        android:id="@+id/school_work_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="4dp"
        android:text="@string/school_work_title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar" />


    <EditText
        android:id="@+id/school_work_simple_info_edittext"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/school_work_title_textview"
        tools:text="간단한 생기부 설명이 입력되는 곳" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/table_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/school_work_simple_info_edittext">

        <TextView
            android:id="@+id/score_label"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="활동 점수"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ability_leadership"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/leadership_numberpicker"
            app:layout_constraintStart_toStartOf="@id/leadership_numberpicker"
            app:layout_constraintTop_toBottomOf="@id/leadership_numberpicker" />

        <NumberPicker
            android:id="@+id/leadership_numberpicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            app:layout_constraintEnd_toStartOf="@id/academic_numberpicker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/score_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ability_academical"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/academic_numberpicker"
            app:layout_constraintStart_toStartOf="@id/academic_numberpicker"
            app:layout_constraintTop_toBottomOf="@id/academic_numberpicker" />

        <NumberPicker
            android:id="@+id/academic_numberpicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/leadership_numberpicker"
            app:layout_constraintEnd_toStartOf="@id/cooperation_numberpicker"
            app:layout_constraintStart_toEndOf="@id/leadership_numberpicker"
            app:layout_constraintTop_toTopOf="@id/leadership_numberpicker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ability_cooperation"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/cooperation_numberpicker"
            app:layout_constraintStart_toStartOf="@id/cooperation_numberpicker"
            app:layout_constraintTop_toBottomOf="@id/cooperation_numberpicker" />

        <NumberPicker
            android:id="@+id/cooperation_numberpicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/leadership_numberpicker"
            app:layout_constraintEnd_toStartOf="@id/sincerity_numberpicker"
            app:layout_constraintStart_toEndOf="@id/academic_numberpicker"
            app:layout_constraintTop_toTopOf="@id/leadership_numberpicker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ability_sincerity"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/sincerity_numberpicker"
            app:layout_constraintStart_toStartOf="@id/sincerity_numberpicker"
            app:layout_constraintTop_toBottomOf="@id/sincerity_numberpicker" />

        <NumberPicker
            android:id="@+id/sincerity_numberpicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/leadership_numberpicker"
            app:layout_constraintEnd_toStartOf="@id/career_numberpicker"
            app:layout_constraintStart_toEndOf="@id/cooperation_numberpicker"
            app:layout_constraintTop_toTopOf="@id/leadership_numberpicker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ability_career"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/career_numberpicker"
            app:layout_constraintStart_toStartOf="@id/career_numberpicker"
            app:layout_constraintTop_toBottomOf="@id/career_numberpicker" />

        <NumberPicker
            android:id="@+id/career_numberpicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/leadership_numberpicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sincerity_numberpicker"
            app:layout_constraintTop_toTopOf="@id/leadership_numberpicker" />

        <TextView
            android:id="@+id/score_sum_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="right"
            android:paddingVertical="2dp"
            android:paddingRight="10dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/academic_numberpicker"
            tools:text="총점 : 25점" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/school_work_detail_info_edittext"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@id/edit_school_work_info_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_layout"
        tools:text="생기부 문구가 입력되는 곳" />

    <Button
        android:id="@+id/edit_school_work_info_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/school_work_edit_info"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>