<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.schoolwork.AddSchoolWorkActivity">

    <TextView
        android:id="@+id/action_bar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/teal_200"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:text="활동 저장"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/school_work_info_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/difficulty_rating_area"
        app:layout_constraintTop_toBottomOf="@id/action_bar">


        <ImageView
            android:id="@+id/image_picker"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_image_picker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/subject_spinner"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toBottomOf="@id/school_work_title_edittext"
            app:layout_constraintStart_toEndOf="@id/image_picker"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/school_work_title_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="제목을 적어주세요"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/subject_spinner"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/school_work_simpleInfo_edittext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="이 활동을 학생들에게 설명해주세요."
            app:layout_constraintBottom_toBottomOf="@id/image_picker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_picker"
            app:layout_constraintTop_toBottomOf="@id/school_work_title_edittext" />

        <EditText
            android:id="@+id/school_work_detail_edittext"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:hint="활동 시 적어줄 개별 세특을 적어주세요"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_picker" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/difficulty_rating_area"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/status_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/school_work_info_area">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="예상 난이도를 설정하세요."
            android:textSize="18sp" />

        <RatingBar
            android:id="@+id/expected_difficulty_rating"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="1"
            android:stepSize="1" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/status_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/school_work_save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/difficulty_rating_area">

        <TextView
            android:id="@+id/score_label"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="활동 점수"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ability_leadership"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/leadership_numberpicker"
            app:layout_constraintStart_toStartOf="@id/leadership_numberpicker"
            app:layout_constraintTop_toBottomOf="@id/leadership_numberpicker" />

        <NumberPicker
            android:id="@+id/leadership_numberpicker"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            app:layout_constraintEnd_toStartOf="@id/academic_numberpicker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/score_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ability_academical"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/academic_numberpicker"
            app:layout_constraintStart_toStartOf="@id/academic_numberpicker"
            app:layout_constraintTop_toBottomOf="@id/academic_numberpicker" />

        <NumberPicker
            android:id="@+id/academic_numberpicker"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/leadership_numberpicker"
            app:layout_constraintEnd_toStartOf="@id/cooperation_numberpicker"
            app:layout_constraintStart_toEndOf="@id/leadership_numberpicker"
            app:layout_constraintTop_toTopOf="@id/leadership_numberpicker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ability_cooperation"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/cooperation_numberpicker"
            app:layout_constraintStart_toStartOf="@id/cooperation_numberpicker"
            app:layout_constraintTop_toBottomOf="@id/cooperation_numberpicker" />

        <NumberPicker
            android:id="@+id/cooperation_numberpicker"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/leadership_numberpicker"
            app:layout_constraintEnd_toStartOf="@id/sincerity_numberpicker"
            app:layout_constraintStart_toEndOf="@id/academic_numberpicker"
            app:layout_constraintTop_toTopOf="@id/leadership_numberpicker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ability_sincerity"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/sincerity_numberpicker"
            app:layout_constraintStart_toStartOf="@id/sincerity_numberpicker"
            app:layout_constraintTop_toBottomOf="@id/sincerity_numberpicker" />

        <NumberPicker
            android:id="@+id/sincerity_numberpicker"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/leadership_numberpicker"
            app:layout_constraintEnd_toStartOf="@id/career_numberpicker"
            app:layout_constraintStart_toEndOf="@id/cooperation_numberpicker"
            app:layout_constraintTop_toTopOf="@id/leadership_numberpicker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ability_career"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/career_numberpicker"
            app:layout_constraintStart_toStartOf="@id/career_numberpicker"
            app:layout_constraintTop_toBottomOf="@id/career_numberpicker" />

        <NumberPicker
            android:id="@+id/career_numberpicker"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/leadership_numberpicker"
            app:layout_constraintEnd_toStartOf="@id/money_numberpicker"
            app:layout_constraintStart_toEndOf="@id/sincerity_numberpicker"
            app:layout_constraintTop_toTopOf="@id/leadership_numberpicker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="포인트"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/money_numberpicker"
            app:layout_constraintStart_toStartOf="@id/money_numberpicker"
            app:layout_constraintTop_toBottomOf="@id/money_numberpicker" />

        <NumberPicker
            android:id="@+id/money_numberpicker"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:background="@color/palette_selection"
            app:layout_constraintBottom_toBottomOf="@id/leadership_numberpicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/career_numberpicker"
            app:layout_constraintTop_toTopOf="@id/leadership_numberpicker" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/school_work_save_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/save_btn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>